# bot

./: .gitignore  __init__.py  __main__.py  alembic.ini  bot_class.py  bot_main.py  ccxt_test.py  constants.py  exceptions.py  load_env.py  load_var.py  load_yaml.py  loggers.py  main.py  proxy_ku.py  requiements.txt  requirement.txt  requirements.txt  setup.cfg  setup.py
.lh/: loggers.py.json  main.py.json  setup.cfg.json
.lh/cmd/: arguments.py.json
.lh/exchanges/: misc.py.json
.lh/persistence/: models.py.json
.lh/src/: alembic.ini.json  constants.py.json  loggers.py.json  main.py.json
alembic/: configuration_alembic.py  env.py  load_config_alembic.py
alembic/versions/: d28d3d22d677_create_kline.py
cmd/: __init__.py  arguments.py  cli_option.py  cli_position.py  sync_command.py  trade_command.py
configuration/: __init__.py  config_utils.py  configuration.py  load_config.py  merge.py  misc.py  process_options.py
enums/: __init__.py  runmode.py
exchange/: exchange.py  kucoin.py  test.sh
exchange/kucoin/: kucoin.py
exchanges/: __init__.py  connector.py  exchange.py  misc.py  recode_all_func.py
exchanges/bbgo_grpc/: market_service.py  subscribe.py
exchanges/kucoin/: __init__.py  client.py  kucoin.py  request.py
log/: bot_record
persistence/: engine.py  migrations.py  models.py  persistence_func_record.py  write_kline.py
persistence/mysql/: kucoin_kline.py
src/: __main__.py  alembic.ini  constants.py  exceptions.py  loggers.py  main.py
src/alembic/: configuration_alembic.py  env.py  load_config_alembic.py
src/alembic_scripts/: env.py
src/cmds/: __init__.py  alembic.py  alembic_cmds.py  arguments.py  cli_option.py  cli_position.py  click_state.py  cmd_test.py  entry.py  sync_command.py  trade_command.py
src/configuration/: __init__.py  config_utils.py  configuration.py  load_config.py  misc.py  process_options.py
src/enums/: __init__.py  time.py
src/exchanges/: __init__.py  exchange.py  (+3 more)
user_data/: config.yaml
yaml-0.2.5/: config.status
(+141 files in other folders)
