# from setuptools import setup, find_packages
# from .constants import BOT_NAME, CMD_NAME1, CMD_1

[metadata]
name = attr:BOT_NAME
version = 0.0.1

[options]
package_dir=
    =src
packages = find:
install_requires = 
    Click
include_package_data=True

[options.packages.find]
where=src
include = *

[options.entry_points]
console_scripts = 
    script_test = cmds.cmd_test:cli
    sync = cmds.sync_command:sync
    entry = cmds.entry:cli
    click_state_test = cmds.click_state:cmd1
    alembic_cmds = cmds.alembic_cmds:cli